# fractal-explorer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  index.html
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: rust.yml
public/: index.html
src/: complex.rs  event.rs  fractal.rs  gpu.rs  lib.rs  main.rs  state.rs  uniform.rs  vertex.rs  window.rs
src/shaders/: shader.wgsl
