[package]
name = "fractal-explorer"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lobis/fractal-explorer"
authors = ["Luis Antonio Obis Aparicio <luis.antonio.obis@gmail.com>"]
description = "A simple Julia Set explorer built using Rust"

[package.metadata.bundle.fractal-explorer]
# Not working on Windows (hopefully fixed soon! haven't testing in other platforms)
# https://github.com/burtonageo/cargo-bundle
name = "fractal-explorer"
identifier = "io.github.lobis.fractal-explorer"
icon = ["public/assets/icon.png"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fractal-explorer-app"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }
instant = "0.1"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
